--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mobile-detect": "^1.4.5",
     "next": "13.0.4",
+    "nodemailer": "^6.9.1",
     "promise": "^8.3.0",
+    "qrcode": "^1.5.1",
     "react": "18.2.0",
+    "react-date-picker": "^9.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "sqlite3": "^5.1.4",
     "swr": "^1.3.0"
   },
