--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datetime": "^3.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
     "sqlite3": "^5.1.4",
     "swr": "^1.3.0"
   },
